[package]
name = "zirv-macros"
version = "0.1.0"
edition = "2024"
description = "A collection of useful macros for everyday programming."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Glubiz/zirv-macros"
documentation = "https://docs.rs/zirv-macros"
keywords = ["rust", "programming"]
categories = ["development-tools"]


[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tracing = { version = "0.1.41", features = ["log"] }